# codemonitor

./: .gitignore  .travis.yml  CHANGES  LICENSE  README.markdown  check-outgoing-commits  clean  codemonitor.cabal  compile-app  dev-setup  interface.glade  monitor.config  run-app  run-tests
src/: Config.hs  GUI.hs  Job.hs  Layout.hs  Main.hs  Monitor.hs  Notifier.hs  Rect.hs  Render.hs
src/GUI/: MainWindow.hs  Renderer.hs
src/Job/: Description.hs  Manage.hs  Running.hs  Scheduler.hs  Types.hs
src/Monitor/: ErrorFile.hs
src/Render/: Graphics.hs  Layout.hs  Rect.hs
tests/: AllTests.hs  Asserts.hs  Fixtures.hs  KillThreadThatHasOtherRunningThreads.hs  KillThreadThatHasRunningProcess.hs  KillThreadThatIsAlreadyDead.hs  KillThreadThatWaitsForMVar.hs  Notifier.hs
